--- a/schema/config.json
+++ b/schema/config.json
@@ -1464,6 +1464,10 @@
               "type": "string",
               "default": "M"
             },
+            "moveCommitsToNewBranch": {
+              "type": "string",
+              "default": "N"
+            },
             "viewGitFlowOptions": {
               "type": "string",
               "default": "i"
